<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">File Manager</string>
    <string name="menu_item_search">Search</string>
    <string name="operation_create_folder">New Folder</string>
    <string name="operation_create_file">New File</string>
    <string name="menu_item_sort">Sort</string>
    <string name="menu_item_sort_name">Name</string>
    <string name="menu_item_sort_size">Size</string>
    <string name="menu_item_sort_date">Time</string>
    <string name="menu_item_sort_type">Type</string>
    <string name="operation_open">Open</string>
    <string name="operation_open_with">Open with</string>
    <string name="operation_copy">Copy</string>
    <string name="operation_folder">Create Folder</string>
    <string name="operation_copy_path">Copy Path</string>
    <string name="operation_paste">Paste</string>
    <string name="operation_move">Cut</string>
    <string name="operation_send">Send</string>
    <string name="operation_rename">Rename</string>
    <string name="operation_delete">Delete</string>
    <string name="operation_info">Details</string>
    <string name="operation_cancel">Cancel</string>
    <string name="operation_refresh">Refresh</string>
    <string name="operation_selectall">Select All</string>
    <string name="operation_selectall_or_cancel">Select All(Cancel)</string>
    <string name="operation_cancel_selectall">Cancel Select All</string>
    <string name="operation_show_sys">Show hidden files</string>
    <string name="operation_cloud_info">Cloud service info</string>
    <string name="operation_hide_sys">Hidden point file and Hidden file</string>
    <string name="operation_delete_permanent">Delete permanent</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">OK</string>
    <string name="no_file">No File</string>
    <string name="tab_system_category">User Data</string>
    <string name="tab_sd_category">Disk Save</string>
    <string name="tab_usb_category">Movable Disk</string>
    <string name="tab_yun_category">Cloud Storage</string>
    <string name="tab_sd">File Manager</string>
    <string name="tab_remote">Remote Management</string>
    <string name="sd_folder">SDCard</string>
    <string name="category_all">All</string>
    <string name="category_music">Music</string>
    <string name="category_video">Videos</string>
    <string name="category_picture">Pictures</string>
    <string name="category_theme">theme</string>
    <string name="category_document">Document</string>
    <string name="category_zip">Zip File</string>
    <string name="category_apk">Unzip</string>
    <string name="category_other">Other</string>
    <string name="category_favorite">Favorite</string>
    <string name="operation_rename_message">Please input new name</string>
    <string name="operation_create_folder_message">Please input folder name</string>
    <string name="operation_create_file_message">Please input file name</string>
    <string name="operation_delete_confirm_message">Confirm deletion?</string>
    <string name="new_folder_name">New Folder</string>
    <string name="new_file_name">New File</string>
    <string name="sd_card_size">SDCard:<xliff:g id="total_size">%1$s</xliff:g></string>
    <string name="sd_card_available">Available:<xliff:g id="available_size">%1$s</xliff:g></string>
    <string name="file_info_location">Location:</string>
    <string name="file_info_size">Size:</string>
    <string name="file_info_modified">Modified:</string>
    <string name="file_info_canread">Readable:</string>
    <string name="file_info_canwrite">Writable:</string>
    <string name="file_info_ishidden">Ishidden:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="operation_deleting">Deleting...</string>
    <string name="operation_pasting">Pasting...</string>
    <string name="operation_moving">Moving...</string>
    <string name="confirm_know">Know</string>
    <string name="install_successful">Install Successfully</string>
    <string name="install_failed">Install Failed</string>
    <string name="error_info_cant_send_folder">The folder can not be sent</string>
    <string name="added_favorite">Added to the favorite</string>
    <string name="removed_favorite">Removed from favorite</string>
    <string name="fail_to_create_folder">Faild, the file is alread exist.</string>
    <string name="fail_to_rename">Faild, file used this name is already exist.</string>
    <string name="enable_sd_card">No usable SDCard, please insert or connect SDCard.</string>
    <string name="start_server">Start Service</string>
    <string name="stop_server">Stop Service</string>
    <string name="notif_server_starting">Remote Management Services is already started.</string>
    <string name="notif_title">Remote Management Services is running.</string>
    <string name="storage_warning">External storage is not available.</string>
    <string name="wifi_state">WiFi Status</string>
    <string name="instruction_pre">After starting, you can remotely manage phone files from computer.</string>
    <string name="instruction">Please input in "My Computer" address:</string>
    <string name="no_wifi">No WiFi</string>
    <string name="no_wifi_hint">No WiFi network, click and check WiFi setting</string>
    <string name="search_title">Search File</string>
    <string name="search_hint">Please input partial or full file name</string>
    <string name="file_size">%d Byte</string>
    <string name="dialog_select_type">Select file type</string>
    <string name="dialog_type_text">Text</string>
    <string name="dialog_type_audio">Audio</string>
    <string name="dialog_type_video">Video</string>
    <string name="dialog_type_image">Image</string>
    <string name="favorite_photo">Photo</string>
    <string name="favorite_sdcard">SDCard</string>
    <string name="favorite_root">Root directory</string>
    <string name="favorite_screen_cap">MIUI Screenshots</string>
    <string name="favorite_ringtone">Ring</string>
    <string name="multi_select_title">Selected <xliff:g id="number">%1$s</xliff:g></string>
    <string name="menu_setting">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="preference_title">General Settings</string>
    <string name="pref_primary_folder">Home Folder</string>
    <string name="pref_read_root">Read the root directory</string>
    <string name="pref_show_real_path">Displays the real path</string>
    <string name="pref_primary_folder_summary">Folder displayed when the program starts, current path: <xliff:g id="string">%1$s</xliff:g></string>
    <string name="pref_show_real_path_summary">Show real path in the navigation bar</string>
    <string name="default_system_primary_folder">/storage/emulated/0/</string>
    <string name="default_sd_primary_folder">/mnt/sdcard</string>
    <string name="default_usb_primary_folder">/storage/usb0</string>
    <string name="default_yun_primary_folder">Hold</string>
    <string name="default_system_primary_folder_cn">Android System</string>
    <string name="default_sd_primary_folder_cn">Disk Space</string>
    <string name="qi_ta">Search</string>
    <string name="video">Video</string>
    <string name="picture">Picture</string>
    <string name="desk">Desktop</string>
    <string name="music">Music</string>
    <string name="computer">Computer</string>
    <string name="usb">USB</string>
    <string name="internet">Network Places</string>
    <string name="cloud">Cloud Service</string>
    <string name="text_about">About</string>
    <string name="text_app_name">File Manager</string>
    <string name="text_theme">In the trend of the classic forever</string>
    <string name="text_version">Version: 1.0</string>
    <string name="text_public">Official Website</string>
    <string name="text_discuss">Forum</string>
    <string name="text_address">http://www.emindsoft.com.cn</string>
    <string name="text_help">Help and feedback</string>
    <string name="text_help_title">You can send feedback directly, or go to the forum feedback, or find the answer in help center.</string>
    <string name="text_to_public">Go to official website feedback</string>
    <string name="text_help_center">Go to official website help center</string>
    <string name="tv_storage_page">Collection</string>
    <string name="left_local_up">Local</string>
    <string name="left_net_up">Internet</string>
    <string name="text_local_storage">Local Storage</string>
    <string name="text_android">User Data</string>
    <string name="text_size">Size: </string>
    <string name="text_available">Available: </string>
    <string name="text_disk_storage">My Computer</string>
    <string name="text_mobile_device">Mobile Device</string>
    <string name="text_fast_access">Fast access</string>
    <string name="text_removable_disk">Movable Disk</string>
    <string name="text_removable_disk1">Movable Disk1</string>
    <string name="text_removable_disk2">Movable Disk2</string>
    <string name="text_removable_disk3">Movable Disk3</string>
    <string name="text_cloud_services">Cloud Service</string>
    <string name="text_cloud_disk">Cloud Storage</string>
    <string name="text_device_storage">Devices Storage: 1.22G</string>
    <string name="text_name">Name: </string>
    <string name="text_no_icon_found">No Desktop Icon</string>
    <string name="text_no_audio_found">No Music...</string>
    <string name="text_no_pictures_found">No Picture...</string>
    <string name="text_internet_page">My Network Places Page</string>
    <string name="text_coming_soon">To be continued...</string>
    <string name="text_dimens">Size</string>
    <string name="text_prefrence">Prefrence</string>
    <string name="text_every_year">All Years</string>
    <string name="text_file_path">Path</string>
    <string name="text_input_content">Please input search content</string>
    <string name="text_no_video_found">No Video...</string>
    <string name="text_account">Account: </string>
    <string name="text_status">Status: </string>
    <string name="group_count">5</string>
    <string name="downloads">Downloads</string>
    <string name="document">Documents</string>
    <string name="recycle">Recycle</string>
    <string name="qq_image">QQ Images</string>
    <string name="qq_file">QQ Files</string>
    <string name="winxin_image">WeChat Images</string>
    <string name="winxin_file">WeChat Files</string>
    <string name="baidu_disk">BaiduNetdisk</string>
    <string name="cloud_create_folder">Create Folder</string>
    <string name="cloud_sync">Sync</string>
    <string name="cloud_desync">Desync</string>
    <string name="remove_usb_device">Umount usb devices</string>
    <string name="format_usb_device">Format usb devices</string>
    <string name="automount_mount">Mount</string>
    <string name="automount_umount">Umount</string>
    <string name="desk_path" translatable="false">/Desktop</string>
    <string name="video_path" translatable="false">/Movies</string>
    <string name="picture_path" translatable="false">/Pictures</string>
    <string name="download_path" translatable="false">/Download</string>
    <string name="document_path" translatable="false">/documents</string>
    <string name="music_path" translatable="false">/Music</string>
    <string name="recycle_path" translatable="false">/Recycle</string>
    <string name="qq_image_path" translatable="false">/Tencent/QQ_Images</string>
    <string name="qq_file_path" translatable="false">/Tencent/QQfile_recv</string>
    <string name="winxin_image_path" translatable="false">/Tencent/MicroMsg/WeiXin</string>
    <string name="winxin_file_path" translatable="false">/Tencent/MicroMsg/Download</string>
    <string name="baidu_disk_path" translatable="false">/BaiduNetdisk</string>
    <string name="input_samba_account">Please enter your username and password!</string>
    <string name="samba_account">User Name:</string>
    <string name="samba_password">Password:</string>
</resources>