<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/dialog_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/dialog_copy"
            android:layout_marginTop="@dimen/left_margrin_text"
            style="@style/textDialog"
            android:text="@string/operation_copy"/>
        <TextView
            android:id="@+id/dialog_paste"
            style="@style/textDialog"
            android:text="@string/operation_paste"/>
        <TextView
            android:id="@+id/dialog_rename"
            style="@style/textDialog"
            android:text="@string/operation_rename"/>
        <TextView
            android:id="@+id/dialog_delete"
            style="@style/textDialog"
            android:text="@string/operation_delete"/>
        <TextView
            android:id="@+id/dialog_move"
            style="@style/textDialog"
            android:text="@string/operation_move"/>
        <TextView
            android:id="@+id/dialog_send"
            style="@style/textDialog"
            android:text="@string/operation_send"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/dialog_sort"
            style="@style/textDialog"
            android:text="@string/menu_item_sort"/>
        <TextView
            android:id="@+id/dialog_copy_path"
            style="@style/textDialog"
            android:text="@string/operation_copy_path"/>
        <TextView
            android:id="@+id/dialog_info"
            style="@style/textDialog"
            android:text="@string/operation_info"/>
        <TextView
            android:id="@+id/dialog_new_folder"
            style="@style/textDialog"
            android:text="@string/operation_create_folder"/>
        <TextView
            android:id="@+id/dialog_new_file"
            style="@style/textDialog"
            android:text="@string/operation_create_file"/>
        <TextView
            android:id="@+id/dialog_visibale_file"
            style="@style/textDialog"
            android:layout_marginBottom="18dp"
            android:text="@string/operation_show_sys"/>
    </LinearLayout>

</FrameLayout>
