<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_storage_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/tv_storage_page"
            android:textColor="@android:color/darker_gray"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_desk"
            style="@style/textSet"
            android:drawableLeft="@drawable/left_desk_selector"
            android:text="@string/desk" />

        <TextView
            android:id="@+id/tv_music"
            style="@style/textSet"
            android:drawableLeft="@drawable/left_music_selector"
            android:text="@string/music" />

        <TextView
            android:id="@+id/tv_video"
            style="@style/textSet"
            android:drawableLeft="@drawable/left_video_selector"
            android:text="@string/video" />

        <TextView
            android:id="@+id/tv_picture"
            style="@style/textSet"
            android:drawableLeft="@drawable/left_picture_selector"
            android:text="@string/picture" />

        <TextView
            android:id="@+id/tv_document"
            style="@style/textSet"
            android:drawableLeft="@drawable/left_document_selector"
            android:text="@string/docement" />

        <TextView
            android:id="@+id/tv_download"
            style="@style/textSet"
            android:drawableLeft="@drawable/left_download_selector"
            android:text="@string/downloads" />

        <TextView
            android:id="@+id/tv_recycle"
            style="@style/textSet"
            android:drawableLeft="@drawable/left_recycle_selector"
            android:text="@string/recycle" />

        <TextView
            android:id="@+id/left_local_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/left_local_up"
            android:textColor="@android:color/darker_gray"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_computer"
            style="@style/textSet"
            android:drawableLeft="@drawable/left_computer_selector"
            android:text="@string/computer" />

        <RelativeLayout
            android:id="@+id/rl_usb_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <TextView
                android:id="@+id/tv_storage_one"
                style="@style/textSet"
                android:drawableLeft="@drawable/left_usb_selector"
                android:text="@string/text_removable_disk1" />

            <TextView
                android:id="@+id/tv_pop_up_one"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="16dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/usb_pop_up_selector"/>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_usb_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >
            <TextView
                android:id="@+id/tv_storage_two"
                style="@style/textSet"
                android:drawableLeft="@drawable/left_usb_selector"
                android:text="@string/text_removable_disk2" />
            <TextView
                android:id="@+id/tv_pop_up_two"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="16dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/usb_pop_up_selector"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_usb_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >
            <TextView
                android:id="@+id/tv_storage_three"
                style="@style/textSet"
                android:drawableLeft="@drawable/left_usb_selector"
                android:text="@string/text_removable_disk3" />
            <TextView
                android:id="@+id/tv_pop_up_three"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="16dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/usb_pop_up_selector"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/left_net_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/left_net_up"
            android:textColor="@android:color/darker_gray"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_net_service"
            style="@style/textSet"
            android:drawableLeft="@drawable/left_internet_selector"
            android:text="@string/internet"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_cloud_service"
            style="@style/textSet"
            android:drawableLeft="@drawable/left_cloud_selector"
            android:text="@string/cloud" />
    </LinearLayout>
</RelativeLayout>
