<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:background="@drawable/dialog_bg_shape">

    <TextView
        android:id="@+id/dialog_type_text"
        style="@style/textViewDialog"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/dialog_type_text"/>

    <TextView
        android:id="@+id/dialog_type_audio"
        style="@style/textViewDialog"
        android:layout_gravity="center"
        android:text="@string/dialog_type_audio"/>
    <TextView
        android:id="@+id/dialog_type_video"
        style="@style/textViewDialog"
        android:text="@string/dialog_type_video"/>
    <TextView
        android:id="@+id/dialog_type_image"
        style="@style/textViewDialog"
        android:layout_marginBottom="10dp"
        android:text="@string/dialog_type_image"/>

</LinearLayout>