<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:paddingTop="10dp"
    android:background="@color/white"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/dialog_sort_name"
        style="@style/textDialog"
        android:text="@string/menu_item_sort_name"/>
    <TextView
        android:id="@+id/dialog_sort_size"
        style="@style/textDialog"
        android:layout_marginTop="5dp"
        android:text="@string/menu_item_sort_size"/>
    <TextView
        android:id="@+id/dialog_sort_time"
        style="@style/textDialog"
        android:layout_marginTop="5dp"
        android:text="@string/menu_item_sort_date"/>
    <TextView
        android:id="@+id/dialog_sort_type"
        style="@style/textDialog"
        android:layout_marginTop="5dp"
        android:text="@string/menu_item_sort_type"
        android:layout_marginBottom="8dp"/>

</LinearLayout>