<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pop_bg_shape">
    <LinearLayout
        android:id="@+id/ll_setting"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/pop_setting_view"
            style="@style/textDialog"
            android:text="@string/operation_show_sys" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_usb"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/pop_usb_view"
            style="@style/textDialog"
            android:text="@string/remove_usb_device" />

        <TextView
            android:id="@+id/pop_usb_info"
            style="@style/textDialog"
            android:text="@string/operation_info" />

        <TextView
            android:id="@+id/pop_usb_format"
            style="@style/textDialog"
            android:text="@string/format_usb_device" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_mount"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/pop_mount"
            style="@style/textDialog"
            android:text="@string/automount_mount" />

        <TextView
            android:id="@+id/pop_umount"
            style="@style/textDialog"
            android:text="@string/automount_umount" />
    </LinearLayout>
</FrameLayout>
