<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_help_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back_bg_selector"
            android:paddingBottom="8dp"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:paddingTop="8dp"
            android:src="@mipmap/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_help"
            android:textSize="@dimen/text16"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E9E9E9"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:text="@string/text_help_title"
            android:textSize="@dimen/text16" />

        <TextView
            android:id="@+id/tv_public_official"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/text_to_public"
            android:textColor="@drawable/help_textcolor_selector"
            android:textSize="@dimen/text14" />

        <TextView
            android:id="@+id/tv_official_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/text_help_center"
            android:textColor="@drawable/help_textcolor_selector"
            android:textSize="@dimen/text14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/text_address"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/text14" />
    </LinearLayout>

</LinearLayout>